--- a/SP_DAL/SP_DAL.csproj
+++ b/SP_DAL/SP_DAL.csproj
@@ -53,7 +53,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Database\Brand.cs">
       <DependentUpon>SPContext.tt</DependentUpon>
     </Compile>
@@ -104,7 +103,23 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BrandRepository.cs" />
+    <Compile Include="Repository\CustomerRepository.cs" />
+    <Compile Include="Repository\DealerRepository.cs" />
     <Compile Include="Repository\IBrand.cs" />
+    <Compile Include="Repository\ICustomer.cs" />
+    <Compile Include="Repository\IDealer.cs" />
+    <Compile Include="Repository\IMechanic.cs" />
+    <Compile Include="Repository\IModel.cs" />
+    <Compile Include="Repository\ISelectedService.cs" />
+    <Compile Include="Repository\IService.cs" />
+    <Compile Include="Repository\IUsers_Receptionist_Advisior.cs" />
+    <Compile Include="Repository\IVehicle.cs" />
+    <Compile Include="Repository\MechanicRepository.cs" />
+    <Compile Include="Repository\ModelRepository.cs" />
+    <Compile Include="Repository\SelectedServiceRepository.cs" />
+    <Compile Include="Repository\ServiceRepository.cs" />
+    <Compile Include="Repository\Users_Receptionist_AdvisiorRepository.cs" />
+    <Compile Include="Repository\VehicleRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
