--- a/SP_Models/SP_Models.csproj
+++ b/SP_Models/SP_Models.csproj
@@ -42,7 +42,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Brands.cs" />
+    <Compile Include="Customers.cs" />
+    <Compile Include="Dealers.cs" />
+    <Compile Include="Mechanics.cs" />
+    <Compile Include="Models.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectedServices.cs" />
+    <Compile Include="Services.cs" />
+    <Compile Include="Users_Receptionist_Advisiors.cs" />
+    <Compile Include="Vehicles.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
